# influxdb-studio

./: .eslintrc.cjs  .gitignore  Element Plus 按钮类型错误修复说明.md  IMPLEMENTATION_SUMMARY.md  README-IDE-REPLICA.md  README.md  RELEASE_GUIDE.md  Rust Send Trait 错误修复说明.md  TAURI_2_COMPATIBILITY_REPORT.md  TAURI_DEV_TROUBLESHOOTING.md  Task.md  Tauri-InfluxDB-Studio-开发任务计划.md  Tech.md  database-display-fix.md  database-issue-fixed.md  debug-database-issue.js  debug-database-issue.md  docker-compose.yml  index.html  influxdb2_config_guide.md  influxdb2_test_guide.md  influxdb_auth_debug.md  package-lock.json  package.json  pnpm-lock.yaml  start-tauri.sh  test-connection.js  test-database-explorer.md  test-debug-logs.md  test-insert-fix.md  test-regex.js  test-sql-replacer.js  test-start.sh  test_connection_fix.md  tsconfig.json  ui.html  vite.config.ts  vite.config.ts.backup  vitest.config.ts  项目架构分析文档.md
.dev/: InfluxDB_Csharp逆向工程.md
.github/: README.md
.github/workflows/: build.yml  flatpak.yml  test.yml
docs/: README.md  api.md  architecture.md  development-plan.md  development.md  flatpak.md  release.md  testing.md  troubleshooting.md  usage-examples.md
flatpak/: README.md  TROUBLESHOOTING.md  com.influxdb.studio.desktop  com.influxdb.studio.metainfo.xml  com.influxdb.studio.yml
public/: monaco-editor-config.js
scripts/: build-flatpak-simple.sh  build-flatpak-smart.sh  build-flatpak.sh  check-flatpak-version.sh  check-version.js  debug-production.sh  diagnose-flatpak.sh  fix-flatpak-build.sh  fix-tauri-dev.sh  init-influxdb.sh  quick-start.sh  release.sh  run-tests.sh  start-tauri-improved.sh  sync-version.js  test-connection.js  test-github-actions.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  error.rs  influxdb.rs  influxdb_trait.rs  main.rs  measurement.rs  models.rs
src-tauri/tests/: database_commands_tests.rs  measurement_commands_tests.rs
src/router/: index.ts
(+60 files in other folders)
